--- a/text-replacer-lib/CMakeLists.txt
+++ b/text-replacer-lib/CMakeLists.txt
@@ -1,19 +1,22 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.5.0)
 project(test VERSION 0.1.0)
 
-set(TARGET_NAME test)
+set(TARGET_NAME text-replacer-lib)
 
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
 
 cmake_policy(SET CMP0076 NEW)
-set (CMAKE_CXX_STANDARD 17)
-
+set (CMAKE_CXX_STANDARD 20)
 include_directories(${TRIPLET_INCLUDE_DIRS}) 
+include_directories("./include")
 
-add_executable(${TARGET_NAME} test.cpp)
+add_library(${TARGET_NAME} SHARED)
+add_subdirectory("./src")
 
+find_package(nlohmann_json CONFIG REQUIRED)
+target_link_libraries(${TARGET_NAME} PRIVATE nlohmann_json::nlohmann_json)
 
 set_target_properties(${TARGET_NAME}
     PROPERTIES
