--- a/text-replacer-mod/mod.toml
+++ b/text-replacer-mod/mod.toml
@@ -5,7 +5,7 @@
 
 # Unique ID of this mod. Pick something long enough that it'll never be the same as any other mod.
 # The name displayed in the mod management menu is separate from this so this doesn't need to be human readable.
-id = "mm_schmiddys_tweaks"
+id = "text-replacer-mod"
 
 # Version of this mod.
 version = "1.0.0"
@@ -29,7 +29,7 @@ dependencies = [
 native_libraries = [
 # Example native library:
 #    { name = "my_native_library", funcs = ["my_native_library_function"] }
-   { name = "mm_schmiddys_lib", funcs = ["hello"] }
+   { name = "text-replacer-lib", funcs = ["text_replacer_on_load", "text_replacer_on_shutdown"] }
 ]
 
 # Inputs to the mod tool.
