text replacement works. Finally.

--- a/text-replacer-mod/mod.toml
+++ b/text-replacer-mod/mod.toml
@@ -32,7 +32,10 @@ native_libraries = [
    { name = "text-replacer-lib", funcs = ["text_replacer_lib_startup",
                                           "text_replacer_lib_shutdown",
                                           "text_replacer_lib_set_char_in_buffer",
-                                          "text_replacer_lib_add_buffer_as_entry"
+                                          "text_replacer_lib_add_buffer_as_entry",
+                                          "text_replacer_lib_has_replacement",
+                                          "text_replacer_lib_prepare_replacement",
+                                          "text_replacer_lib_get_replacement_char"
    ]}
 ]
 
