--- a/text-replacer-lib/src/CMakeLists.txt
+++ b/text-replacer-lib/src/CMakeLists.txt
@@ -7,6 +7,8 @@ target_sources(
     "./lib_main.hpp"
     "./recomp_mod_api.cpp"
     "./recomp_mod_api.hpp"
+    "./settings.cpp"
+    "./settings.hpp"
     "./TextEntry.cpp"
     "./TextEntry.hpp"
     "./utils.cpp"
